cs-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-files
  namespace: cs-files
  labels:
    app: cs-files
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cs-files
  template:
    metadata:
      labels:
        app: cs-files
    spec:
      serviceAccountName: cs-files-sa
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: maps
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: maps
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: cs-files-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: cs-files
  namespace: cs-files
spec:
  selector:
    app: cs-files
  ports:
  - port: 80
    targetPort: 80
